# ctest-action-artifacts

./: CMakeLists.txt  test.cc
.github/workflows/: cmake-single-platform.yml  minimal-artifact-example.yml  minimal-artifact-with-container-example.yml
